recursion.logo.spiral.Spiral.scala.error
Erreur de compilation :
Spiral:6: error: value =! is not a member of Int
    while (steps=!0)  {
                ^Spiral:9: error: not found: type int
      spiral(steps-1:int, angle:Int, length+3:Int, increment:Int);
                     ^