recursion.logo.spiral.Spiral.scala.code
def spiral(steps:Int, angle:Int, length:Int, increment:Int)    {
  if (steps==0)	{
    
  }
  else	{
    while (steps=!0)	{
      avance(length)
      gauche(angle)
      spiral(steps-1:int, angle:Int, length+3:Int, increment:Int);
    };
  };
}